--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-countup": "^6.0.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-typing-effect": "^2.0.5",
+    "react-visibility-sensor": "^5.1.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
